cabal-version:      2.4
name:               as6502
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      As6502

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        As6502.Assembler
      , As6502.Operand
      , As6502.Operator

    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , mtl
    hs-source-dirs: src
    default-language: Haskell2010
