cabal-version:      3.0
name:               casm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ailrk
maintainer:         jimmy123good@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      As6502
      As8051
      ASM

    -- Modules included in this library but not exported.
    other-modules:
        Internal
      , Test
      , Util

      , ASM.Assembler
      , ASM.Macro

      , As6502.Internal
      , As6502.Operand
      , As6502.Operator
      , As6502.Error

      , As8051.Internal
      , As8051.Operand
      , As8051.Operator
      , As8051.Error

      , As_X86_32.Internal
      , As_X86_32.Operand
      , As_X86_32.Operator
      , As_X86_32.Error

      , Pass.Optimizer
      , Pass.Relaxation


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , template-haskell
      , mtl
    hs-source-dirs: src
    default-language: Haskell2010
